2004-05-06  Earnie Boyd  <earnie@users.sf.net>

	* index.shtml: Include news-short.html instead of rside.html.  This
	must remain dynamic.
	* rside.shtml: Delete file.

2004-05-06  Earnie Boyd  <earnie@users.sf.net>

	* ssi/rside.html: Include news-short.html instead of posting static
	news in the CVS.

2004-05-02	Nathan Fisher <natbobc@users.sf.net>

	* bugs.shtml: Change to new style.
	* docs.shtml: Ditto.
	* download.shtml: Ditto.
	* history.shtml: Ditto.
	* index.shtml: Ditto.
	* licensing.shtml: Ditto.
	* links.shtml: Ditto.
	* lists.shtml: Ditto.
	* mingwfaq.shtml: Ditto.
	* msys.shtml: Ditto.
	* news.shtml: Ditto.
	
2004-05-02	Nathan Fisher <natbobc@users.sf.net>

	* mingw_news.css: Add to CVS for new layout.
	* mingw_orig.css: Add to CVS as reference for old layout.
	* ssi/header.html: Add to CVS as default page header.
	* ssi/lside.html: Add to CVS as default leftside menu.
	* ssi/rside.html: Add to CVS as default rightside news block.

2004-03-31	Nathan Fisher <natbobc@users.sf.net>

	* lists.shtml: Bug fix from bug report #926431.
	* mingwfaq.shtml: Change ADA to Ada.

2004-03-28	Luke Dunstan <infidel@users.sf.net>

	* docs.shtml, history.shtml, links.shtml: Update links to Colin
	Peters's webpage.

2004-03-24	Luke Dunstan <infidel@users.sf.net>

	* bugs.shtml: Minor fix.

2004-03-08	Nathan Fisher <natbobc@users.sf.net>

	* mingwfaq.shtml: Fix link from bug report #911315.

2004-02-18	Nathan Fisher <natbobc@users.sf.net>

	* links.shtml: Add libunicow reference to the page.

2003-12-29  Earnie Boyd  <earnie@users.sf.net>

	* download.shmtl: Revert change to 1.25 version.
	* ssi/files.html: Remove.

2003-12-24	Nathan Fisher <natbobc@users.sf.net>

	* ssi/files.html: Add to CVS and ran through HTML tidy.

2003-12-24	Nathan Fisher <natbobc@users.sf.net>

	* download.shtml: Change server-side include from release.html to files.html.

2003-12-15  Earnie Boyd  <earnie@users.sf.net>

	* docs.shtml: Reword the pexports documentation to remove invalid links.
