@@ -1,73 +1,0 @@
-<!-- $Id: ported.shtml,v 1.12 2002-03-16 22:06:35 stevedperkins Exp $ -->
-
-<html>
-<head>
- <title>Ported Software</title>
-</head>
-<body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
-
-<h1 align="center">Ported Software</h1>
-
-<!-- two-column format: left sidebar and the body -->
-<table border="0" cellspacing="6" cellpadding="8">
-<tr>
-<td bgcolor="#eeeeee" valign="top" width="10%">
-
-<!--#include file="ssi/lsidebar.html"-->
-
-</td>
-<!-- 2nd column of two-column format: the body -->
-<td valign="top">
-
-<!-- ================================================================== -->
-<!--                                                                    -->
-<!--			  Main Body                                     -->
-<!--                                                                    -->
-
-<table border="0" cellspacing="6" cellpadding="0">
-<tr>
-<td valign="top" align="left">
-
-The following sites contain software ported to MinGW:
-<ul>
-<li> <a href="ftp://ftp.nanotech.wisc.edu/pub/khan/gnu-win32/mingw32/ports/">
-Mumit Khan's ports</a></li>
-<li> <a href="ftp://ftp.franken.de/pub/win32/develop/gnuwin32/mingw32/porters/Mikey/">
-ftp://ftp.franken.de/pub/win32/develop/gnuwin32/mingw32/porters/Mikey/</a></li>
-<li> <a href="ftp://ftp.franken.de/pub/win32/develop/gnuwin32/mingw32/porters/Boyd_Earnie/">
-ftp://ftp.franken.de/pub/win32/develop/gnuwin32/mingw32/porters/Boyd_Earnie/</a>
-</li>
-<li> <a href="http://mingwrep.sourceforge.net/">
-Mingw packages repository</a> - effort to collect and make consistent ports of
-common libraries and other important software.
-</li>
-<li> <a href="http://home.a-city.de/franco.bez/mc/mc.html">GNU Midnight
-Commander port</a> by Franco Bez
-</li>
-<li> <a href="http://mywebpage.netscape.com/PtrPck/directx.htm">
-DirectX 8</a> by Peter Puck
-</li>
-</ul>
-
-<p>This list is woefully incomplete, so please do send in additions and
-corrections.</p>
-
-</td>
-</tr>
-</table>
-
-<!-- <hr noshade="noshade" size="1' /> -->
-
-<!-- Close page table -->
-</td></tr></table>
-
-<!--#include file="ssi/bottombar.html"-->
-<!--#include file="ssi/footer.html"-->
-
-<address>
-<br />Last revised $Date: 2002-03-16 22:06:35 $
-</address>
-
-</body>
-</html>
-
