@@ -33,7 +33,7 @@
    </form>
 </li>
    <li><a href="http://sourceforge.net/" target="_nw"><img
-        src="http://sourceforge.net/sflogo.php?group_id=2435&amp;type=1"
+        src="http://sflogo.sourceforge.net/sflogo.php?group_id=2435&amp;type=1"
 	     alt="Powered by SourceForge" border="0"></a></li>
 </ul>
 </div>
